--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-requests==2.31.0
-pandas==2.0.3
-SQLAlchemy==2.0.20
-psycopg2-binary==2.9.7
-python-dotenv==1.0.0
+pandas==2.1.1
+numpy==1.26.2
+requests
+sqlalchemy
+psycopg2-binary
+python-dotenv
