--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,3 @@
-# .github/workflows/ci-cd.yml
 name: CI/CD Pipeline
 
 on:
@@ -68,9 +67,11 @@ jobs:
 
     - name: Build Docker image
       run: |
-        docker build -t your-username/crypto-pipeline:latest .
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/crypto-pipeline:latest .
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/crypto-pipeline:${{ github.sha }} .
 
     - name: Push to Docker Hub
       run: |
         echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-        docker push your-username/crypto-pipeline:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/crypto-pipeline:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/crypto-pipeline:${{ github.sha }}
